--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.8",
-	"appid": "wxc40b6179d3eb2ba4",
+	"appid": "wxb39d67b4e5dda79d",
 	"projectname": "%E5%BC%A0%E6%9D%B0%E8%81%8C%E4%BB%8B",
 	"isGameTourist": false,
 	"condition": {
