--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 0,
 			"list": [
 				{
 					"id": -1,
@@ -93,6 +93,12 @@
 					"id": -1,
 					"name": "申请中心",
 					"pathName": "pages/applycenter/applycenter",
+					"query": ""
+				},
+				{
+					"id": 10,
+					"name": "岗位详情",
+					"pathName": "pages/postdetails/postdetails",
 					"query": ""
 				}
 			]
