--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 0,
 			"list": [
 				{
 					"id": -1,
@@ -100,6 +100,12 @@
 					"name": "岗位详情",
 					"pathName": "pages/postdetails/postdetails",
 					"query": ""
+				},
+				{
+					"id": 11,
+					"name": "测是从小程序吗",
+					"pathName": "pages/postdetails/postdetails",
+					"query": "scene=5"
 				}
 			]
 		}
