--- a/project.config.json
+++ b/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
-	"appid": "wxb39d67b4e5dda79d",
-	"projectname": "%E5%BC%A0%E6%9D%B0%E8%81%8C%E4%BB%8B",
+	"appid": "wx7786b678789f848c",
+	"projectname": "%E5%BC%A0%E6%9D%B0%E8%81%8C%E4%BB%8B%E5%8F%91%E5%B8%83%E7%89%88",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
