修改小程序名称

--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "张杰职介",
+    "navigationBarTitleText": "张杰职介总店",
     "navigationBarTextStyle":"black"
   },
   "tabBar": {
