--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 8,
 			"list": [
 				{
 					"id": -1,
@@ -106,6 +106,12 @@
 					"name": "测是从小程序吗",
 					"pathName": "pages/postdetails/postdetails",
 					"query": "scene=51"
+				},
+				{
+					"id": -1,
+					"name": "门店",
+					"pathName": "pages/mendian/mendian",
+					"query": ""
 				}
 			]
 		}
