--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -104,7 +104,7 @@
 				{
 					"id": 11,
 					"name": "测是从小程序吗",
-					"pathName": "pages/postdetails/postdetails",
+					"pathName": "pages/index/index",
 					"query": "scene=45"
 				},
 				{
