--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 13,
 			"list": [
 				{
 					"id": -1,
@@ -111,6 +111,12 @@
 					"id": -1,
 					"name": "门店",
 					"pathName": "pages/mendian/mendian",
+					"query": ""
+				},
+				{
+					"id": 13,
+					"name": "2",
+					"pathName": "pages/shenqing/shenqing",
 					"query": ""
 				}
 			]
